test/error/operator_valid.gw
operator void op(int i){}
